Bug 178292 - aspect ratio crop is slow and jumps around in first second
Summary: aspect ratio crop is slow and jumps around in first second
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Editor-Crop (other bugs)
Version First Reported In: 4.9.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-20 17:11 UTC by Geoff King
Modified: 2016-06-29 19:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Geoff King 2008-12-20 17:11:42 UTC
Version:           0.10.0-beta8 (rev.: 899143) (using 4.1.3 (KDE 4.1.3), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.27.2

When using the aspect ratio crop tool, during the first second (approx) of using the tool the initial crop box jumps around 3 times.  This makes the tool seem slow and looks strange. After that the tool does seem a little slow, but works fine.  
Thanks, Geoff
Comment 1 Geoff King 2009-02-23 02:41:12 UTC
Just checked and have same behaviour in current rc version. 
Thanks, Geoff

digiKam version 0.10.0 (rev.: 930226)
Exiv2 can write to Jp2: No
Exiv2 can write to Jpeg: Yes
Exiv2 can write to Png: No
Exiv2 can write to Tiff: No
Exiv2 support XMP metadata: Yes
LibCImg: 130
LibExiv2: 0.17
LibJPEG: 62
LibJasper: 1.900.1
LibKDE: 4.2.00 (KDE 4.2.0)
LibKExiv2: 0.5.0
LibKdcraw: 0.4.0
LibLCMS: 116
LibPNG: 1.2.27
LibQt: 4.4.3
LibRaw: 0.6.9-Release
LibTIFF: LIBTIFF, Version 3.8.2 Copyright (c) 1988-1996 Sam Leffler Copyright (c) 1991-1996 Silicon Graphics, Inc.
Marble widget: 0.7
LibGphoto2: 2.4.2
LibKipi: 0.3.0
Comment 2 Andi Clemens 2009-03-31 16:20:35 UTC
SVN commit 947447 by aclemens:

Block signals while reading settings to avoid jumping of the ratio crop
tool.

BUG:178292

 M  +42 -7     ratiocroptool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=947447
Comment 3 Andi Clemens 2009-06-29 12:58:22 UTC
Just for the record:

Performance should be much improved since my last commits.
Please try again with latest SVN.