Block signals while reading settings to avoid jumping of the ratio crop tool.

BUG:178292

svn path=/trunk/extragear/graphics/digikam/; revision=947447